# tongo

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  connections.json  default.nix  docker-compose.yaml  justfile
.claude/: settings.local.json
.github/workflows/: cd.yml  ci.yml  release-plz.yml
.helix/: languages.toml
assets/: default-config.toml  demo.tape
assets/themes/: catppuccin.toml  nightowl.toml
docs/: signal-refactor-plan.md
scripts/: seed.sh
src/: app.rs  client.rs  command.rs  component.rs  components.rs  config.rs  connection.rs  error.rs  event.rs  json_labeler.rs  key_hint.rs  key_map.rs  lib.rs  main.rs  model.rs  persistence.rs  screens.rs  sessions.rs  state.rs  system.rs  testing.rs  tree.rs  tui.rs  utils.rs  widgets.rs
src/app/: coll_list.rs  db_list.rs  filter_input.rs  main_view.rs  state.rs  status_bar.rs
src/components/: confirm_modal.rs  connection_list.rs  connection_screen.rs  documents.rs  help_modal.rs  input.rs  list.rs  primary_screen.rs  query_input.rs  status_bar.rs  tab.rs  tab_bar.rs
src/components/generic/: list.rs
src/components/input/: conn_name_input.rs  conn_str_input.rs  connection_name_input.rs  doc_input.rs  filter.rs  input_modal.rs
src/components/list/: coll_list.rs  collections.rs  connection_list.rs  connections.rs  databases.rs  db_list.rs
src/config/: color_map.rs  key_map.rs
src/model/: collection.rs  connection.rs  database.rs
src/screens/: connection_screen.rs  primary_screen.rs
src/system/: command.rs  event.rs  message.rs  signal.rs
src/testing/: mock_storage.rs
src/utils/: clipboard.rs  doc_searcher.rs  edit_doc.rs  extended_json.sublime-syntax  file_manager.rs  files.rs  json_labeler.rs  mongo_tree.rs  storage.rs
src/widgets/: coll_list.rs  conn_name_input.rs  conn_str_input.rs  connection_list.rs  db_list.rs  filter_input.rs  input_widget.rs  list_widget.rs  main_view.rs  status_bar.rs
