[package]
name = "tongo"
authors = ["Drew Zemke"]
version = "0.10.1"
edition = "2021"
license = "MIT"
description = "A TUI for MongoDB"
repository = "https://github.com/drewzemke/tongo"
readme = "README.md"

[lints.clippy]
pedantic = { level = "warn", priority = 1 }
nursery = { level = "warn", priority = 1 }
unwrap_used = { level = "warn", priority = 2 }
module_name_repetitions = { level = "allow", priority = 2 }
allow_attributes = { level = "warn", priority = 2 }

[dependencies]
anyhow = "1.0.86"
arboard = "3.4.0"
clap = { version = "4.5.6", features = ["derive"] }
crossterm = "0.27.0"
dirs = "5.0.1"
edit = "0.1.5"
futures = "0.3.30"
itertools = "0.13.0"
mongodb = "2.8.2"
ratatui = "0.27.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
strum = "0.26.3"
strum_macros = "0.26.4"
syntect = "5.2.0"
thiserror = "1.0.63"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tui-input = "0.9.0"
tui-tree-widget = "0.21.0"

[features]
default = []
experimental_sessions = []
