[package]
name = "tongo"
authors = ["Drew Zemke"]
version = "0.12.1"
edition = "2021"
license = "MIT"
description = "A TUI for MongoDB"
repository = "https://github.com/drewzemke/tongo"
readme = "README.md"

[lints.clippy]
pedantic = { level = "warn", priority = 1 }
nursery = { level = "warn", priority = 1 }
unwrap_used = { level = "warn", priority = 2 }
module_name_repetitions = { level = "allow", priority = 2 }
allow_attributes = { level = "warn", priority = 2 }

[dependencies]
anyhow = "1.0.96"
arboard = "3.4.1"
clap = { version = "4.5.30", features = ["derive"] }
crossterm = "0.28.1"
dirs = "5.0.1"
edit = "0.1.5"
futures = "0.3.31"
itertools = "0.13.0"
json5 = "0.4.1"
mongodb = "3.2.1"
ratatui = "0.29.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
strum = "0.26.3"
strum_macros = "0.26.4"
syntect = "5.2.0"
thiserror = "1.0.69"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tui-input = "0.11.1"
tui-tree-widget = "0.23.0"
uuid = { version = "1.14.0", features = ["v4"] }

[features]
default = []
experimental_sessions = []
