[package]
name = "tongo"
authors = ["Drew Zemke"]
version = "0.15.1"
edition = "2021"
license = "GPL-3.0"
description = "A TUI for MongoDB"
repository = "https://github.com/drewzemke/tongo"
readme = "README.md"

[lints.clippy]
pedantic = { level = "warn", priority = 1 }
nursery = { level = "warn", priority = 1 }
unwrap_used = { level = "warn", priority = 2 }
module_name_repetitions = { level = "allow", priority = 2 }
allow_attributes = { level = "warn", priority = 2 }

[dependencies]
anyhow = "1.0.99"
arboard = "3.6.1"
clap = { version = "4.5.47", features = ["derive"] }
crossterm = "0.28.1"
dirs = "6.0.0"
edit = "0.1.5"
futures = "0.3.31"
itertools = "0.14.0"
json5 = "0.4.1"
mongodb = "3.3.0"
nucleo = "0.5.0"
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
strum = "0.27.2"
strum_macros = "0.27.2"
syntect = "5.2.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tui-input = "0.14.0"
tui-scrollview = "0.5.1"
tui-tree-widget = "0.23.1"
uuid = { version = "1.18.1", features = ["v4"] }

[features]
default = []
